--- a/services/dev/index.html
+++ b/services/dev/index.html
@@ -12,7 +12,7 @@
   <meta http-equiv="Cache-Control" content="no-cache"/>
   <meta http-equiv="imagetoolbar" content="no">
   <meta http-equiv="cleartype" content="on">
-  <link rel="shortcut icon" href="../../static/assets/preload/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="#" type="image/x-icon">
   <title>Mega-lo-mania</title>
 </head>
 <body>
