--- a/services/dev/index.html
+++ b/services/dev/index.html
@@ -13,7 +13,7 @@
   <meta http-equiv="imagetoolbar" content="no">
   <meta http-equiv="cleartype" content="on">
   <link rel="shortcut icon" href="#" type="image/x-icon">
-  <title>Mega-lo-mania</title>
+  <title>Memory</title>
 </head>
 <body>
 <div id="canvas-wrapper"></div>
